test/sema/typeck/module/class-field-array-get-not-accessible.out
error: element is not accessible.
--> class-field-array-get-not-accessible.dora:1:30
 | fn f(x: foo::Foo) { let _a = x.bar(10i64); }
                                ~~~~~
 | mod foo { pub class Foo { bar: Array[Int32] } }
 | 
1 error found.
