test/sema/typeck/module/class-field-array-get-not-accessible.dora
fn f(x: foo::Foo) { let _a = x.bar(10i64); }
mod foo { pub class Foo { bar: Array[Int32] } }
